--- a/assets/themes/ey/css/blog-main.css
+++ b/assets/themes/ey/css/blog-main.css
@@ -17,7 +17,8 @@
 {
     width: 100%;
     height: 200px;
-    object-fit: fill;
+    object-fit: cover;
+    object-position: top;
 }
 .col-item:hover .photo img {
    -webkit-transform: scale(1.1);
