as seen in text and button parallel

--- a/assets/themes/ey/css/custom.css
+++ b/assets/themes/ey/css/custom.css
@@ -201,7 +201,7 @@ button, input, optgroup, select, textarea {
 }
 @media screen and (max-width: 400px){
     .heading-style {
-        font-size: 21pt;
+        font-size: 21pt !important;
     }
 }
 /* Headings css ends*/
